--- a/style.css
+++ b/style.css
@@ -1,15 +1,14 @@
 * {
-    font-family: 'Lato', sans-serif;
-    box-sizing: border-box;
+  font-family: 'Lato', sans-serif;
+  box-sizing: border-box;
 }
 
 header {
-height: 730px;
-width: 100%;
-background-image: url(./images/mobile-head.png);
-background-repeat: no-repeat;
-background-size: cover;
-/* display: flex; */
+  height: 730px;
+  width: 100%;
+  background-image: url(./images/mobile-head.png);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 #burgerIcon {
@@ -21,129 +20,342 @@ background-size: cover;
 /* header section */
 
 #burgerIcon img {
-    width: 30px;
-    height: 30px;
+  width: 30px;
+  height: 30px;
 }
 
 #headline #vision {
-    color: #ec5242;
-    font-weight: 500;
-    margin-top: 40px;
-    margin-left: 5%;
-    margin-right: 5%;
+  color: #ec5242;
+  font-weight: 500;
+  margin-top: 40px;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 #vision p {
-    font-size: 25px;
+  font-size: 25px;
 }
 
 #vision h1 {
-    color: #ec5242;
-    font-weight: 900;
-    margin-top: -20px;
-    font-size: 35px;
+  color: #ec5242;
+  font-weight: 900;
+  margin-top: -20px;
+  font-size: 35px;
 }
 
 header #headlinePara {
-    margin: 0 auto;
-    margin-left: 5%;
-    margin-right: 5%;
-    padding-left: 20px;
-    padding-right: 20px;
-    font-size: 20px;
-    background-color: whitesmoke;
-    border: 2px white solid;
+  margin: 0 auto;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding-left: 20px;
+  padding-right: 20px;
+  font-size: 20px;
+  background-color: whitesmoke;
+  border: 2px white solid;
 }
 
 #headline #time {
-    margin-left: 5%;
-    margin-right: 5%;
-    font-size: 25px;
-    
+  margin-left: 5%;
+  margin-right: 5%;
+  font-size: 25px;
 }
 
 #headline #time h2 {
-    font-weight: 900;
-    
+  font-weight: 900;
 }
 
 /* main-section */
 
 #mainProgram {
-    height: 1000px;
-    background-color: #272a31;
+  height: 1000px;
+  background-color: #272a31;
+  width: 100%;
 }
 
-#mainProgram .title {
-    padding-top: 20px;
-    display: flex;
-    justify-content: center;
-    /* font-size: 28px; */
-    color: whitesmoke;
+.title {
+  padding-top: 20px;
+  display: flex;
+  justify-content: center;
+  color: whitesmoke;
 }
 
-#mainProgram hr {
-    border: #ec5242 2px solid;
-    width: 60px;
+hr {
+  border: #ec5242 2px solid;
+  width: 60px;
 }
 
 .grid-container {
-    display: grid;
-    grid-template-rows: 140px 140px 140px 140px 140px;
-    margin-top: 25px;
-    padding-left: 10px;
-    padding-right: 10px;
-  }
+  display: grid;
+  grid-template-rows: 140px 140px 140px 140px 140px;
+  margin-top: 25px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
 
-  .grid-item {
-      border: 6px #272a31 solid;
-      background-color: #72727265;
-      display: flex;
-      align-items: center;
-      
-  }
+.grid-item {
+  border: 6px #272a31 solid;
+  background-color: #72727265;
+  display: flex;
+  align-items: center;
+}
 
-  .grid-item img {
-      width: 70px;
-      height: 70px;
-      padding-left: 10px;
-      padding-right: 10px;
-      
-  }
+.grid-item img {
+  width: 70px;
+  height: 70px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
 
-  .grid-item h2 {
-    color: #ec5242;
-    padding-left: 10px;
-    padding-right: 10px;
-      
-  }
+.grid-item h2 {
+  color: #ec5242;
+  padding-left: 10px;
+  padding-right: 10px;
+}
 
-  .grid-item p {
-    color: white;
-    padding-left: 10px;
-    padding-right: 10px;
-    line-height: 20px;
-    font-size: 20px;
-  }
+.grid-item p {
+  color: white;
+  padding-left: 10px;
+  padding-right: 10px;
+  line-height: 20px;
+  font-size: 20px;
+}
 
-  #mainProgram .buttons {
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-    margin-top: 40px;
-      
-  }
+#mainProgram .buttons {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40px;
+}
 
 .buttons button {
-    background-color: #ec5242;
-    border: 1px #ec5242 solid;
-    height: 100px;
-    width: 70%;
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 30px;
-  }
+  background-color: #ec5242;
+  border: 1px #ec5242 solid;
+  height: 100px;
+  width: 70%;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 30px;
+}
+
+/* staff section */
+
+#staff {
+  height: 1050px;
+  width: 100%;
+}
+
+#staff .title {
+  padding-top: 20px;
+  display: flex;
+  justify-content: center;
+  color: black;
+  font-size: 25px;
+}
+
+.grid-container1 {
+  display: grid;
+  grid-template-rows: 150px 150px 150px 150px 150px 150px;
+  margin-top: 25px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.grid-item1 {
+  background-color: white;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.grid-item1 img {
+  width: 100px;
+  height: 100px;
+  margin-left: 20px;
+  margin-top: 20px;
+}
+
+.grid-container1 .staffImage {
+  background-image: url(./images/chess.jpg);
+  background-repeat: no-repeat;
+  background-size: 60px 60px;
+  background-position: 2px 2px;
+}
+
+.details .expertise {
+  color: #ec5242;
+}
+
+/* about section */
+
+#about {
+  height: 2000px;
+  width: 100%;
+}
+
+.aboutUs {
+  background-color: rgb(245, 245, 245);
+  background-image: url(./images/about-background.png);
+  background-repeat: no-repeat;
+  background-size: 1087px 300px;
+}
+
+#aboutVision {
+  display: flex;
+  flex-wrap: wrap;
+  height: 250px;
+  justify-content: center;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+}
+
+#aboutVision p {
+  font-size: 25px;
+  color: #ec5242;
+}
+
+#aboutVision h2 {
+  color: #ec5242;
+  display: flex;
+  font-size: 33px;
+  font-weight: 900;
+  margin-top: -10px;
+}
+
+.aboutPara {
+  width: 90%;
+  margin: 0 auto;
+  font-size: 20px;
+  text-align: center;
+  background-color: white;
+}
+
+.aboutEmail {
+  display: flex;
+  justify-content: center;
+  line-height: 25px;
+}
+
+.aboutUsLogo {
+  width: 100%;
+  border-bottom: 3px whitesmoke solid;
+  height: 530px;
+}
+
+.aboutUsLogo h2 {
+  display: flex;
+  justify-content: center;
+  font-size: 25px;
+}
+
+.aboutUsLogo p {
+  display: flex;
+  text-align: center;
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+
+.aboutUsLogo img {
+  margin: 0 auto;
+  margin-top: 30px;
+  width: 90%;
+  display: flex;
+  height: 300px;
+}
+
+.aboutUsPast {
+  width: 100%;
+}
+
+.aboutUsPast h2 {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  font-size: 25px;
+}
+
+.aboutUsPast p {
+  display: flex;
+  text-align: center;
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 20px;
+  justify-content: center;
+}
+
+.aboutUsPast .one {
+  background-image: url(./images/last-batch-1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 230px;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.aboutUsPast .two {
+  background-image: url(./images/last-batch-2.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 230px;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.aboutUsPast .batches {
+  width: 100%;
+  height: 230px;
+  background-color: rgba(206, 16, 16, 0.4);
+  display: flex;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.aboutUsPast .batches p {
+  color: white;
+  font-weight: 900;
+  font-size: 25px;
+}
+
+.aboutUsPartners {
+  width: 100%;
+  height: 300px;
+  margin: 0 auto;
+  margin-top: 30px;
+  background-color: #272a31;
+  background-image:
+    url(./images/ahraf.png),
+    url(./images/android.png),
+    url(./images/aoi.png),
+    url(./images/airbnb.png),
+    url(./images/bing.png);
+  background-repeat: no-repeat;
+  background-position: 85% 85%, 15% 48%, 50% 48%, 15% 85%, 87% 48%;
+  background-size: 30%, 20%, 35%, 30%, 20%;
+}
+
+.aboutUsPartners h2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}
+
+.copyright {
+  display: flex;
+  height: 150px;
+  align-content: center;
+  align-items: center;
+  justify-content: space-around;
+  font-weight: 800;
+}
+
+.copyright img {
+  height: 112px;
+  width: 141px;
+}
