--- a/style.css
+++ b/style.css
@@ -352,7 +352,10 @@ hr {
   }
 
   #mainProgram {
-    height: 600px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 630px;
   }
 
   #mainProgram .grid-container {
@@ -380,21 +383,31 @@ hr {
     text-decoration: underline;
   }
 
+  #staff {
+    background-color: whitesmoke;
+    border: 3px whitesmoke solid;
+    height: 820px;
+  }
+
   .grid-container1 {
     display: grid;
     grid-template-columns: 40% 40%;
     grid-template-rows: auto auto auto;
-    width: 80%;
+    width: 85%;
     justify-content: space-around;
     margin: 0 auto;
     margin-top: 20px;
+    align-items: center;
+  }
+
+  .grid-container1 .grid-item1 {
+    background-color: whitesmoke;
   }
 
   .foot .aboutUsPartners {
     width: 100%;
     height: 300px;
     margin: 0 auto;
-    margin-top: 30px;
     background-color: #272a31;
     background-image:
       url(./images/ahraf.png),
@@ -412,9 +425,12 @@ hr {
     align-items: center;
     justify-content: center;
     color: white;
+    margin: 0 auto;
+    padding-top: 20px;
   }
 
   .foot .copyright {
+    background-color: whitesmoke;
     display: flex;
     height: 150px;
     align-content: center;
